# PT

./: .gitignore  README.md  _config.yml  index.md  pt.code-workspace
assets/css/: style.css
cpp/: CMakeLists.txt  deps.cmake
cpp/include/: PT.hpp  concept-fwd.hpp  concept.hpp  index.hpp  operand-fwd.hpp  operand.hpp  registry.hpp
cpp/native/: CMakeLists.txt
cpp/native/include/: native.hpp
cpp/network/: CMakeLists.txt
cpp/network/include/: network.hpp  server.hpp  tcp.hpp  udp.hpp
cpp/network/src/: network.cpp  server.cpp  tcp.cpp  udp.cpp
cpp/src/: PT.cpp  concept.cpp  main.cpp  operand.cpp  registry.cpp
solana/: CMakeLists.txt  Dockerfile
solana/src/: lib.cpp
solidity/: README.md  package-lock.json  package.json
solidity/contracts/: Concept.sol  Operand.sol  Ownable.sol  Registry.sol  Runner.sol
solidity/contracts/concept/: ConceptBase.sol  IConcept.sol
solidity/contracts/concepts/: ConceptA.sol  ConceptB.sol  Duration.sol  Pitch.sol  Time.sol
solidity/contracts/concepts-examples/: ConceptA.sol  ConceptB.sol  Duration.sol  Pitch.sol  Time.sol
solidity/contracts/condition/: ConditionBase.sol  ICondition.sol
solidity/contracts/condition/conditions-examples/: AlwaysFalse.sol  AlwaysTrue.sol  Counter.sol
solidity/contracts/connector/: ConnectorBase.sol  IConnector.sol
solidity/contracts/error/: Error.sol
solidity/contracts/feature/: FeatureBase.sol  IFeature.sol
solidity/contracts/feature/features-examples/: Duration.sol  FeatureA.sol  FeatureB.sol  Pitch.sol  Time.sol
solidity/contracts/features-examples/: Duration.sol  FeatureA.sol  FeatureB.sol  Pitch.sol  Time.sol
solidity/contracts/operand/: IOperand.sol  OperandBase.sol
solidity/contracts/operands/: Mul.sol  Nop.sol  add.sol  mul.sol  nop.sol
solidity/contracts/operands-example/: Add.sol  Mul.sol  Nop.sol
solidity/contracts/ownable/: IOwnable.sol  OwnableBase.sol  OwnableConstructorBase.sol
solidity/contracts/particle/: IParticle.sol  ParticleBase.sol
solidity/contracts/proxy/: PTContractProxy.sol  PTRegistryProxy.sol
solidity/contracts/registry/: IRegistry.sol  RegistryBase.sol
solidity/contracts/runner/: Runner.sol
solidity/contracts/transformation/: ITransformation.sol  TransformationBase.sol
solidity/contracts/transformation/transformations-examples/: Add.sol  Mul.sol  Nop.sol
solidity/contracts/transformations-examples/: Mul.sol  Nop.sol
solidity/contracts/types/: RunningInstance.sol
solidity/contracts/utils/: FormatHashLib.sol
solidity/scripts/: deploy_with_ethers.ts  deploy_with_web3.ts  ethers-lib.ts  web3-lib.ts
solidity/test/: Lock.ts
solidity/test/ut/: PT_Tests.sol
solidity/tests/: PT_Tests.sol
